--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "fs": "0.0.1-security",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.511.0",
+    "marked": "^15.0.12",
     "mermaid": "^11.6.0",
     "next": "15.3.2",
     "react": "^19.0.0",
