--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.7",
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "fs": "0.0.1-security",
     "fuse.js": "^7.1.0",
