feat: Implement intelligent document caching and monitoring system
- Added a caching mechanism for documents to improve performance and reduce file system reads.
- Introduced a new API endpoint for cache management, allowing retrieval of cache statistics and clearing of specific or all caches.
- Created a CacheMonitor component for real-time cache statistics display and management in the UI.
- Updated document retrieval functions to utilize the new caching system.
- Implemented a file watcher to automatically rebuild and restart the application upon changes to markdown files.
- Enhanced text annotation features with more precise positioning and context information.
- Added new fields to annotations for better tracking and interaction (likes, replies, etc.).
- Improved error handling and user feedback in various components.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "pm2:delete": "pm2 delete docs-platform",
     "pm2:status": "pm2 status",
     "pm2:logs": "pm2 logs docs-platform",
-    "pm2:monit": "pm2 monit"
+    "pm2:monit": "pm2 monit",
+    "watch:docs": "node watch-docs.js",
+    "prod:watch": "pnpm build && pnpm pm2:start && pnpm watch:docs"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
