feat: add performance testing and login scripts, enhance security configuration
- Introduced `test-cache-performance.js` for measuring cache performance with HTTP requests.
- Added `test-login.sh` to automate login functionality testing, including success and error scenarios.
- Created `watch-docs.js` to monitor documentation changes and rebuild the project automatically.
- Implemented `quick-start.sh` for a streamlined application startup process.
- Developed `final-fix.sh`, `fix-env-loading.sh`, and `fix-truncation.sh` scripts to address environment variable issues.
- Added `generate-password-hash.js` for generating secure password hashes.
- Created `immediate-fix.sh` and `update-security.sh` for immediate and comprehensive security updates.
- Implemented `verify-password.js` for validating user passwords against stored hashes.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,22 @@ logs
 docs/
 data/
 
+
+# 临时脚本和文件
+*.tmp
+*.temp
+cleanup-project.sh
+
+# PM2 日志
+logs/
+*.log
+
+# 环境变量文件
+.env
+.env.local
+.env.production
+.env.staging
+
+# 备份文件
+*.backup
+*.backup.*
