--- a/package.json
+++ b/package.json
@@ -4,19 +4,47 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:verbose": "DEBUG=* VERBOSE=true next dev --turbopack",
+    "dev:debug": "NODE_OPTIONS='--inspect' DEBUG=* next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "start:verbose": "DEBUG=* VERBOSE=true next start",
+    "start:debug": "NODE_OPTIONS='--trace-warnings --trace-deprecation' DEBUG=* next start",
     "lint": "next lint",
-    "pm2:start": "node pm2-start.js prod",
-    "pm2:dev": "node pm2-start.js dev",
+    "type-check": "tsc --noEmit",
+
+    "pm2:start": "node scripts/deployment/pm2-start.js prod",
+    "pm2:dev": "node scripts/deployment/pm2-start.js dev",
+    "pm2:verbose": "pm2 start ecosystem.config.js --env development",
     "pm2:stop": "pm2 stop docs-platform",
     "pm2:restart": "pm2 restart docs-platform",
     "pm2:delete": "pm2 delete docs-platform",
     "pm2:status": "pm2 status",
     "pm2:logs": "pm2 logs docs-platform",
+    "pm2:logs:verbose": "pm2 logs docs-platform --lines 100",
+    "pm2:logs:follow": "pm2 logs docs-platform --lines 0",
     "pm2:monit": "pm2 monit",
-    "watch:docs": "node watch-docs.js",
-    "prod:watch": "pnpm build && pnpm pm2:start && pnpm watch:docs"
+    "pm2:flush": "pm2 flush docs-platform",
+    "pm2:reload": "pm2 reload docs-platform",
+
+    "debug:env": "node scripts/development/debug-env.js",
+    "debug:auth": "node scripts/security/verify-password.js",
+    "debug:logs": "bash scripts/development/view-logs.sh",
+
+    "security:setup": "bash scripts/security/update-security.sh",
+    "security:verify": "node scripts/security/verify-password.js",
+    "security:hash": "node scripts/security/generate-password-hash.js",
+
+    "quick-start": "bash scripts/quick-start.sh",
+    "watch:docs": "node scripts/development/watch-docs.js",
+    "prod:watch": "pnpm build && pnpm pm2:start && pnpm watch:docs",
+
+    "test:login": "bash scripts/development/test-login.sh",
+    "test:api": "curl -X POST http://localhost:3001/api/auth/login -H 'Content-Type: application/json' -d '{\"password\":\"test\"}'",
+
+    "clean": "rm -rf .next && rm -rf logs/*.log",
+    "clean:pm2": "pm2 delete all && pm2 flush",
+    "reset": "pnpm clean && pnpm clean:pm2 && pnpm install"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
