feat: add pre-build environment check and safe build script for improved deployment process

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "dev:verbose": "DEBUG=* VERBOSE=true next dev --turbopack",
     "dev:debug": "NODE_OPTIONS='--inspect' DEBUG=* next dev --turbopack",
+    "prebuild": "node scripts/deployment/pre-build-check.js",
     "build": "next build",
+    "build:force": "next build",
+    "build:safe": "bash scripts/deployment/safe-build.sh",
     "start": "next start",
     "start:verbose": "DEBUG=* VERBOSE=true next start",
     "start:debug": "NODE_OPTIONS='--trace-warnings --trace-deprecation' DEBUG=* next start",
