refactor: remove deprecated quick-start script and replace with safe-build script
- Deleted `quick-start.sh` as it was outdated and replaced by a more robust `safe-build.sh` script.
- Added `safe-build.sh` to ensure environment variables are correctly set before building the application.
- Removed several security-related scripts that were redundant or no longer needed, including `final-fix.sh`, `fix-env-loading.sh`, `fix-truncation.sh`, `generate-password-hash.js`, `immediate-fix.sh`, `update-security.sh`, and `verify-password.js`.
- Introduced a new `verify-password.js` script to validate the admin password against the stored hash.
- Updated the build process to streamline the setup and improve security practices.

--- a/package.json
+++ b/package.json
@@ -4,44 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "dev:verbose": "DEBUG=* VERBOSE=true next dev --turbopack",
-    "dev:debug": "NODE_OPTIONS='--inspect' DEBUG=* next dev --turbopack",
-    "prebuild": "node scripts/deployment/pre-build-check.js",
+    "prebuild": "node scripts/pre-build-check.js",
     "build": "next build",
-    "build:force": "next build",
-    "build:safe": "bash scripts/deployment/safe-build.sh",
+    "build:safe": "bash scripts/safe-build.sh",
     "start": "next start",
-    "start:verbose": "DEBUG=* VERBOSE=true next start",
-    "start:debug": "NODE_OPTIONS='--trace-warnings --trace-deprecation' DEBUG=* next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "pm2:start": "node scripts/deployment/pm2-start.js prod",
-    "pm2:dev": "node scripts/deployment/pm2-start.js dev",
-    "pm2:verbose": "pm2 start ecosystem.config.js --env development --log-type json",
+
+    "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop docs-platform",
     "pm2:restart": "pm2 restart docs-platform",
     "pm2:delete": "pm2 delete docs-platform",
+    "pm2:logs": "pm2 logs docs-platform --lines 50",
     "pm2:status": "pm2 status",
-    "pm2:logs": "pm2 logs docs-platform",
-    "pm2:logs:verbose": "pm2 logs docs-platform --lines 100",
-    "pm2:logs:follow": "pm2 logs docs-platform --lines 0",
-    "pm2:monit": "pm2 monit",
-    "pm2:flush": "pm2 flush docs-platform",
-    "pm2:reload": "pm2 reload docs-platform",
-    "debug:env": "node scripts/development/debug-env.js",
-    "debug:auth": "node scripts/security/verify-password.js",
-    "debug:logs": "bash scripts/development/view-logs.sh",
-    "security:setup": "bash scripts/security/update-security.sh",
-    "security:verify": "node scripts/security/verify-password.js",
-    "security:hash": "node scripts/security/generate-password-hash.js",
-    "quick-start": "bash scripts/quick-start.sh",
-    "watch:docs": "node scripts/development/watch-docs.js",
-    "prod:watch": "pnpm build && pnpm pm2:start && pnpm watch:docs",
-    "test:login": "bash scripts/development/test-login.sh",
-    "test:api": "curl -X POST http://localhost:3001/api/auth/login -H 'Content-Type: application/json' -d '{\"password\":\"test\"}'",
-    "clean": "rm -rf .next && rm -rf logs/*.log",
-    "clean:pm2": "pm2 delete all && pm2 flush",
-    "reset": "pnpm clean && pnpm clean:pm2 && pnpm install"
+
+    "security:setup": "node scripts/generate-password.js",
+    "security:verify": "node scripts/verify-password.js",
+
+    "clean": "rm -rf .next && rm -rf logs/*.log"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
