--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdown-preview",
+  "name": "misonote-markdown",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,8 +19,8 @@
     "pm2:logs": "pm2 logs docs-platform --lines 50",
     "pm2:status": "pm2 status",
 
-    "docker:build": "docker build -t markdown-preview .",
-    "docker:run": "docker run -p 3001:3001 markdown-preview",
+    "docker:build": "docker build -t misonote-markdown .",
+    "docker:run": "docker run -p 3001:3001 misonote-markdown",
     "docker:compose": "docker-compose up -d",
     "docker:deploy": "bash scripts/docker-deploy.sh",
     "docker:manage": "bash scripts/docker-manage.sh",
