--- a/mcp-client/package.json
+++ b/mcp-client/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "node misonote-mcp-client.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-local": "MCP_API_KEY=test_key MCP_SERVER_URL=http://localhost:3000 node misonote-mcp-client.js"
   },
   "keywords": [
     "mcp",
