--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "misonote-markdown",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -20,11 +20,16 @@
     "docker:build": "docker build -t misonote-markdown .",
     "docker:run": "docker run -p 3001:3001 misonote-markdown",
     "docker:compose": "docker-compose up -d",
+    "docker:compose:mcp": "docker-compose --profile mcp up -d",
     "docker:deploy": "bash scripts/docker-deploy.sh",
+    "docker:deploy:mcp": "bash scripts/docker-deploy.sh --with-mcp",
     "docker:manage": "bash scripts/docker-manage.sh",
     "docker:logs": "docker-compose logs -f",
+    "docker:logs:mcp": "docker-compose --profile mcp logs -f",
     "docker:stop": "docker-compose down",
+    "docker:stop:mcp": "docker-compose --profile mcp down",
     "docker:restart": "docker-compose restart",
+    "docker:restart:mcp": "docker-compose --profile mcp restart",
     "docker:publish": "bash scripts/docker-publish.sh",
     "docker:publish:check": "bash scripts/docker-publish-check.sh",
     "docker:publish:prepare": "bash scripts/docker-publish-check.sh && echo 'Ready to publish! Run: pnpm docker:publish'",
