--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,7 @@ services:
       - HOSTNAME=0.0.0.0
       # 设置管理员密码（推荐修改）
       - ADMIN_PASSWORD=your_secure_password
-      # 可选：自定义 MCP API Key
-      # - MCP_API_KEY=your_custom_mcp_key
-      # 可选：自定义公开访问地址
+      # 可选：自定义公开访问地址（也可在管理后台设置）
       # - NEXT_PUBLIC_BASE_URL=https://your-domain.com
     restart: unless-stopped
     healthcheck:
