--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,18 +33,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # 设置 Node.js 缓存以加速依赖安装
+    # 设置 Node.js
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
 
-    # 设置 pnpm 缓存
+    # 设置 pnpm 缓存（推荐方式）
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
       with:
         version: latest
+        cache: true
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
