Add business architecture framework and enterprise submodule
🏗️ Business Architecture:
- Add comprehensive business architecture documentation
- Create technical implementation plan
- Add step-by-step implementation guide

🔧 Core Framework:
- Implement license management system
- Add feature gate mechanism
- Create plugin system foundation
- Add business API endpoints

🏢 Enterprise Integration:
- Add misonote-enterprise as git submodule
- Create enterprise feature placeholders
- Add upgrade prompt components
- Set up commercial licensing structure

📚 Documentation:
- Business model and pricing strategy
- Technical architecture design
- Development roadmap and milestones
- Setup automation scripts

This establishes the foundation for commercial features while
keeping the core open source. Enterprise features will be
developed in the private submodule repository.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "misonote-mcp-client"]
 	path = misonote-mcp-client
 	url = git@github.com:leeguooooo/misonote-mcp-client.git
+[submodule "enterprise"]
+	path = enterprise
+	url = https://github.com/leeguooooo/misonote-enterprise.git
