添加misonote-license-server作为git submodule
- 基于Cloudflare Workers + Hono + D1的许可证在线验证服务
- 支持许可证验证、激活、撤销等功能
- 实现速率限制、认证、审计日志等安全功能
- 为安全风险评估与加固计划的在线验证阶段做准备

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "enterprise"]
 	path = enterprise
 	url = https://github.com/leeguooooo/misonote-enterprise.git
+[submodule "misonote-license-server"]
+	path = misonote-license-server
+	url = https://github.com/leeguooooo/misonote-license-server.git
