feat: 添加完整的单元测试框架和API Key测试
✨ 新功能:
- 配置 Vitest 测试框架
- 创建测试数据库工具
- 添加 API Key 功能的完整单元测试
- 添加数据库功能测试
- 添加 API 路由集成测试
- 创建 GitHub Actions 测试工作流

🧪 测试覆盖:
- API Key 创建、验证、更新、删除
- 数据库连接、事务、备份、清理
- API 路由认证和权限检查
- 错误处理和边界情况

📋 测试要求:
- 所有 PR 必须通过单元测试才能合并
- 特别关注数据库功能的测试覆盖
- 确保代码质量和功能稳定性

🔧 配置文件:
- vitest.config.ts - 测试配置
- .github/workflows/test.yml - CI/CD 测试流程
- docs/TESTING.md - 测试指南文档

注意: 部分测试需要进一步调优，但框架已完整建立

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "build:docker": "DOCKER_BUILD=true SKIP_PREBUILD=true next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
     "postinstall": "[ \"$SKIP_POSTINSTALL\" = \"true\" ] || (echo 'ℹ️  如果看到构建脚本警告，请运行: pnpm approve-builds' && exit 0)",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop docs-platform",
@@ -53,7 +58,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
-    "fs": "0.0.1-security",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
@@ -74,6 +78,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jsonwebtoken": "^9.0.9",
@@ -81,9 +88,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@vitest/ui": "^3.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "jsdom": "^26.1.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.1.4"
   }
 }
