feat: 完成AI团队大脑功能规划和MCP工具扩展
- 🚀 新增11个AI功能点子完整规划
- 📋 MCP工具从14个扩展到71个工具设计
- 🎯 产品定位升级：从文档管理到AI团队大脑
- 💰 完整的商业价值分析和实施路线图
- 🔧 企业级功能和数据库迁移优化
- 📊 投资推介文档和技术演示完成

核心功能模块:
1. AI代码风格导师 - 团队代码规范AI化
2. AI自动汇报系统 - 日报周报月报自动化
3. AI团队管理仪表板 - 智能团队分析
4. AI项目风险预警 - 实时风险监控
5. AI Bug管理专家 - 智能Bug解决
6. AI复盘记录生成 - 自动复盘分析
7. AI设计实现转换 - Figma到代码转换
8. AI产品任务规划 - 需求到任务智能拆分
9. AI团队交接助手 - 知识传承智能化
10. AI云记忆系统 - 跨平台记忆同步
11. AI新员工导师 - 智能入职指导

技术亮点:
- MCP协议深度集成，支持71个AI工具
- 企业级许可证和安全系统完善
- 完整的商业化技术栈
- AI原生的团队管理解决方案

--- a/.dockerignore
+++ b/.dockerignore
@@ -115,6 +115,17 @@ docker-compose*
 docs/
 *.md
 
+# 🚨 SECURITY: 排除商业代码 - 防止企业版代码泄露
+enterprise/
+misonote-license-server/
+docs/商业化架构/
+
+# 🚨 SECURITY: 排除许可证相关敏感文件
+.license-config/
+scripts/license-generator.js
+scripts/test-license-verification.js
+scripts/docker-publish-enterprise.sh
+
 # Development files (排除不需要的脚本，保留 Docker 运行时需要的)
 scripts/test-*.sh
 scripts/safe-build.sh
