--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "pm2:delete": "pm2 delete docs-platform",
     "pm2:logs": "pm2 logs docs-platform --lines 50",
     "pm2:status": "pm2 status",
-    "docker:build": "docker build -t misonote-markdown .",
-    "docker:run": "docker run -p 3001:3001 misonote-markdown",
+    "docker:build": "docker build -f Dockerfile.community -t misonote-markdown:community .",
+    "docker:build:community": "docker build -f Dockerfile.community -t misonote-markdown:community .",
+    "docker:build:enterprise": "docker build -f Dockerfile.enterprise -t misonote-markdown:enterprise .",
+    "docker:run": "docker run -p 3001:3001 misonote-markdown:community",
+    "docker:run:community": "docker run -p 3001:3001 misonote-markdown:community",
+    "docker:run:enterprise": "docker run -p 3001:3001 -e MISONOTE_LICENSE_KEY=$MISONOTE_LICENSE_KEY misonote-markdown:enterprise",
     "docker:compose": "docker-compose up -d",
     "docker:deploy": "bash scripts/docker-deploy.sh",
     "docker:manage": "bash scripts/docker-manage.sh",
@@ -32,8 +36,16 @@
     "docker:stop": "docker-compose down",
     "docker:restart": "docker-compose restart",
     "docker:publish": "bash scripts/docker-publish.sh",
+    "docker:publish:community": "bash scripts/docker-publish-community.sh",
+    "docker:publish:enterprise": "bash misonote-license-server/scripts/docker-publish-enterprise.sh",
     "docker:publish:check": "bash scripts/docker-publish-check.sh",
-    "docker:publish:prepare": "bash scripts/docker-publish-check.sh && echo 'Ready to publish! Run: pnpm docker:publish'",
+    "docker:publish:prepare": "bash scripts/docker-publish-check.sh && echo 'Ready to publish! Run: pnpm docker:publish:community'",
+    "license:generate-keys": "node misonote-license-server/scripts/license-generator.js generate-keys",
+    "license:generate": "node misonote-license-server/scripts/license-generator.js generate",
+    "license:verify": "node misonote-license-server/scripts/license-generator.js verify",
+    "license:list": "node misonote-license-server/scripts/license-generator.js list",
+    "license:test": "node misonote-license-server/scripts/test-license-verification.js",
+    "security:check": "node misonote-license-server/scripts/security-check.js",
     "security:setup": "node scripts/generate-password.js",
     "security:verify": "node scripts/verify-password.js",
     "install:full": "bash scripts/install.sh",
@@ -57,6 +69,7 @@
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "commander": "^14.0.0",
     "dotenv": "^16.5.0",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
